--- a/openApiDocs/beta/Groups.yml
+++ b/openApiDocs/beta/Groups.yml
@@ -407,11 +407,11 @@ paths:
     post:
       tags:
         - groups.group
-      summary: Create group
-      description: 'Create a new group as specified in the request body. You can create one of the following groups: This operation returns by default only a subset of the properties for each group. These default properties are noted in the Properties section. To get properties that are not returned by default, do a GET operation and specify the properties in a $select OData query option. Note: To create a team, first create a group then add a team to it, see create team.'
+      summary: Upsert group
+      description: "Create a new group object if it doesn't exist, or update the properties of an existing group object.\nYou can create or update the following types of group: By default, this operation returns only a subset of the properties for each group. For a list of properties that are returned by default, see the Properties section of the group resource. To get properties that are not returned by default, do a GET operation and specify the properties in a $select OData query option."
       externalDocs:
         description: Find more info here
-        url: https://learn.microsoft.com/graph/api/group-post-groups?view=graph-rest-beta
+        url: https://learn.microsoft.com/graph/api/group-upsert?view=graph-rest-beta
       operationId: group_CreateGroup
       requestBody:
         description: New entity
@@ -841,11 +841,11 @@ paths:
     post:
       tags:
         - groups.conversation
-      summary: Create openTypeExtension
-      description: 'Create an open extension (openTypeExtension object) and add custom properties in a new or existing instance of a resource. You can create an open extension in a resource instance and store custom data to it all in the same operation, except for specific resources. The table in the Permissions section lists the resources that support open extensions.'
+      summary: Create conversation
+      description: Create a new conversation by including a thread and a post. Use reply thread or reply post to further post to that conversation.
       externalDocs:
         description: Find more info here
-        url: https://learn.microsoft.com/graph/api/opentypeextension-post-opentypeextension?view=graph-rest-beta
+        url: https://learn.microsoft.com/graph/api/group-post-conversations?view=graph-rest-beta
       operationId: group_CreateConversation
       parameters:
         - name: group-id
@@ -1238,10 +1238,10 @@ paths:
       tags:
         - groups.conversation
       summary: Invoke action reply
-      description: 'Create an open extension (openTypeExtension object) and add custom properties in a new or existing instance of a resource. You can create an open extension in a resource instance and store custom data to it all in the same operation, except for specific resources. The table in the Permissions section lists the resources that support open extensions.'
+      description: 'Reply to a post and add a new post to the specified thread in a group conversation.  You can specify both the parent conversation and thread in the request, or, you can specify just the parent thread without the parent conversation.'
       externalDocs:
         description: Find more info here
-        url: https://learn.microsoft.com/graph/api/opentypeextension-post-opentypeextension?view=graph-rest-beta
+        url: https://learn.microsoft.com/graph/api/post-reply?view=graph-rest-beta
       operationId: group.conversation.thread_reply
       parameters:
         - name: group-id
@@ -11488,11 +11488,11 @@ paths:
     get:
       tags:
         - groups.conversationThread
-      summary: Get conversation thread
-      description: Get a thread object.
+      summary: Get conversationThread
+      description: "Get a specific thread that belongs to a group. You can specify both the parent conversation and the thread, or, \nyou can specify the thread without referencing the parent conversation. "
       externalDocs:
         description: Find more info here
-        url: https://learn.microsoft.com/graph/api/group-get-thread?view=graph-rest-beta
+        url: https://learn.microsoft.com/graph/api/conversationthread-get?view=graph-rest-beta
       operationId: group_GetThread
       parameters:
         - name: group-id
@@ -11627,10 +11627,10 @@ paths:
       tags:
         - groups.conversationThread
       summary: Invoke action reply
-      description: 'Create an open extension (openTypeExtension object) and add custom properties in a new or existing instance of a resource. You can create an open extension in a resource instance and store custom data to it all in the same operation, except for specific resources. The table in the Permissions section lists the resources that support open extensions.'
+      description: 'Reply to a post and add a new post to the specified thread in a group conversation.  You can specify both the parent conversation and thread in the request, or, you can specify just the parent thread without the parent conversation.'
       externalDocs:
         description: Find more info here
-        url: https://learn.microsoft.com/graph/api/opentypeextension-post-opentypeextension?view=graph-rest-beta
+        url: https://learn.microsoft.com/graph/api/post-reply?view=graph-rest-beta
       operationId: group.thread_reply
       parameters:
         - name: group-id
@@ -18298,6 +18298,8 @@ components:
               items:
                 $ref: '#/components/schemas/microsoft.graph.cloudPC'
               x-ms-navigationProperty: true
+            communications:
+              $ref: '#/components/schemas/microsoft.graph.userCloudCommunication'
             contactFolders:
               type: array
               items:
@@ -21407,7 +21409,10 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.platformCredentialAuthenticationMethod'
+              description: Represents a platform credential instance registered to a user on Mac OS.
               x-ms-navigationProperty: true
+            qrCodePinMethod:
+              $ref: '#/components/schemas/microsoft.graph.qrCodePinAuthenticationMethod'
             softwareOathMethods:
               type: array
               items:
@@ -21671,6 +21676,16 @@ components:
               type: string
               description: The user principal name (UPN) of the user assigned to the Cloud PC.
               nullable: true
+          additionalProperties:
+            type: object
+    microsoft.graph.userCloudCommunication:
+      allOf:
+        - $ref: '#/components/schemas/microsoft.graph.entity'
+        - title: userCloudCommunication
+          type: object
+          properties:
+            callSettings:
+              $ref: '#/components/schemas/microsoft.graph.callSettings'
           additionalProperties:
             type: object
     microsoft.graph.contactFolder:
@@ -26806,6 +26821,20 @@ components:
               $ref: '#/components/schemas/microsoft.graph.device'
           additionalProperties:
             type: object
+    microsoft.graph.qrCodePinAuthenticationMethod:
+      allOf:
+        - $ref: '#/components/schemas/microsoft.graph.authenticationMethod'
+        - title: qrCodePinAuthenticationMethod
+          type: object
+          properties:
+            pin:
+              $ref: '#/components/schemas/microsoft.graph.qrPin'
+            standardQRCode:
+              $ref: '#/components/schemas/microsoft.graph.qrCode'
+            temporaryQRCode:
+              $ref: '#/components/schemas/microsoft.graph.qrCode'
+          additionalProperties:
+            type: object
     microsoft.graph.softwareOathAuthenticationMethod:
       allOf:
         - $ref: '#/components/schemas/microsoft.graph.authenticationMethod'
@@ -27357,6 +27386,26 @@ components:
         - administrator
         - unknownFutureValue
       type: string
+    microsoft.graph.callSettings:
+      allOf:
+        - $ref: '#/components/schemas/microsoft.graph.entity'
+        - title: callSettings
+          type: object
+          properties:
+            delegates:
+              type: array
+              items:
+                $ref: '#/components/schemas/microsoft.graph.delegationSettings'
+              description: Represents the delegate settings.
+              x-ms-navigationProperty: true
+            delegators:
+              type: array
+              items:
+                $ref: '#/components/schemas/microsoft.graph.delegationSettings'
+              description: Represents the delegator settings.
+              x-ms-navigationProperty: true
+          additionalProperties:
+            type: object
     microsoft.graph.typedEmailAddress:
       allOf:
         - $ref: '#/components/schemas/microsoft.graph.emailAddress'
@@ -27517,10 +27566,10 @@ components:
       properties:
         name:
           type: string
-          description: Name for this key-value pair
+          description: 'Name for this key-value pair. For more information about possible names for each resource type that uses this configuration, see keyValuePair names and values.'
         value:
           type: string
-          description: Value for this key-value pair
+          description: 'Value for this key-value pair. For more information about possible values for each resource type that uses this configuration, see keyValuePair names and values.'
           nullable: true
       additionalProperties:
         type: object
@@ -34494,6 +34543,59 @@ components:
         - linux
         - unknownFutureValue
       type: string
+    microsoft.graph.qrPin:
+      allOf:
+        - $ref: '#/components/schemas/microsoft.graph.entity'
+        - title: qrPin
+          type: object
+          properties:
+            code:
+              type: string
+            createdDateTime:
+              pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+              type: string
+              format: date-time
+              nullable: true
+            forceChangePinNextSignIn:
+              type: boolean
+              nullable: true
+            updatedDateTime:
+              pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+              type: string
+              format: date-time
+              nullable: true
+          additionalProperties:
+            type: object
+    microsoft.graph.qrCode:
+      allOf:
+        - $ref: '#/components/schemas/microsoft.graph.entity'
+        - title: qrCode
+          type: object
+          properties:
+            createdDateTime:
+              pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+              type: string
+              format: date-time
+              nullable: true
+            expireDateTime:
+              pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+              type: string
+              format: date-time
+              nullable: true
+            image:
+              $ref: '#/components/schemas/microsoft.graph.qrCodeImageDetails'
+            lastUsedDateTime:
+              pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+              type: string
+              format: date-time
+              nullable: true
+            startDateTime:
+              pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+              type: string
+              format: date-time
+              nullable: true
+          additionalProperties:
+            type: object
     microsoft.graph.teamworkUserIdentity:
       allOf:
         - $ref: '#/components/schemas/microsoft.graph.identity'
@@ -34741,6 +34843,7 @@ components:
         - none
         - standard
         - unknownFutureValue
+        - plus
       type: string
     microsoft.graph.actionState:
       title: actionState
@@ -34772,6 +34875,26 @@ components:
         - vMware
         - hp
       type: string
+    microsoft.graph.delegationSettings:
+      allOf:
+        - $ref: '#/components/schemas/microsoft.graph.entity'
+        - title: delegationSettings
+          type: object
+          properties:
+            allowedActions:
+              $ref: '#/components/schemas/microsoft.graph.delegateAllowedActions'
+            createdDateTime:
+              pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+              type: string
+              description: 'Date and time when the delegator or delegate entry was created. The DateTimeOffset type represents date and time information using ISO 8601 format and is always in UTC. For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z.'
+              format: date-time
+              nullable: true
+            isActive:
+              type: boolean
+              description: Indicates whether the delegator or delegate relationship is currently active.
+              nullable: true
+          additionalProperties:
+            type: object
     microsoft.graph.emailType:
       title: emailType
       enum:
@@ -38562,6 +38685,7 @@ components:
         - driveItem
         - user
         - teamsChannel
+        - plannerTask
       type: string
     microsoft.graph.plannerCreationSourceKind:
       title: plannerCreationSourceKind
@@ -40161,6 +40285,28 @@ components:
         - failedActivation
         - unknownFutureValue
       type: string
+    microsoft.graph.qrCodeImageDetails:
+      title: qrCodeImageDetails
+      type: object
+      properties:
+        binaryValue:
+          type: string
+          format: base64url
+          nullable: true
+        errorCorrectionLevel:
+          $ref: '#/components/schemas/microsoft.graph.errorCorrectionLevel'
+        rawContent:
+          type: string
+          format: base64url
+          nullable: true
+        version:
+          maximum: 2147483647
+          minimum: -2147483648
+          type: number
+          format: int32
+          nullable: true
+      additionalProperties:
+        type: object
     microsoft.graph.teamworkUserIdentityType:
       title: teamworkUserIdentityType
       enum:
@@ -40278,6 +40424,32 @@ components:
         - failure
         - unknownFutureValue
       type: string
+    microsoft.graph.delegateAllowedActions:
+      title: delegateAllowedActions
+      type: object
+      properties:
+        joinActiveCalls:
+          type: boolean
+          description: Indicates whether the delegator or delegate allows participation in active calls.
+          nullable: true
+        makeCalls:
+          type: boolean
+          description: Indicates whether the delegator or delegate allows calls to be made on their behalf.
+          nullable: true
+        manageCallAndDelegateSettings:
+          type: boolean
+          description: Indicates whether the delegator or delegate allows the management of call and delegation settings.
+          nullable: true
+        pickUpHeldCalls:
+          type: boolean
+          description: Indicates whether the delegator or delegate allows held calls to be picked up.
+          nullable: true
+        receiveCalls:
+          type: boolean
+          description: Indicates whether the delegator or delegate allows calls to be received on their behalf.
+          nullable: true
+      additionalProperties:
+        type: object
     microsoft.graph.deviceAndAppManagementAssignmentFilterType:
       title: deviceAndAppManagementAssignmentFilterType
       enum:
@@ -43500,6 +43672,15 @@ components:
               x-ms-navigationProperty: true
           additionalProperties:
             type: object
+    microsoft.graph.errorCorrectionLevel:
+      title: errorCorrectionLevel
+      enum:
+        - l
+        - m
+        - q
+        - h
+        - unknownFutureValue
+      type: string
     microsoft.graph.teamworkConversationIdentity:
       allOf:
         - $ref: '#/components/schemas/microsoft.graph.identity'
